--- a/index.html
+++ b/index.html
@@ -67,30 +67,112 @@
                           <tr>
                             <th scope="col">Titolo</th>
                             <th scope="col">Stato</th>
-                            <th scope="col" class="d-sm-none d-md-table-cell">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col" class="d-none d-md-table-cell">Data prestito</th>
+                            <th scope="col" class="text-center">Azioni</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td class="d-sm-none d-md-table-cell">Otto</td>
+                            <td scope="row">I pilastri della terra</td>
                             <td>
-                                <i class="fa-solid fa-square-pen"></i>
+                                <span class="badge rounded-pill text-bg-success">Secondary</span>
+                            </td>
+                            <td class="d-none d-md-table-cell">---</td>
+                            <td>
+                                <div class="d-flex gap-2 justify-content-center">
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-square-pen"></i>
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                  </div>
                             </td>
                           </tr>
                           <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td class="d-sm-none d-md-table-cell">Thornton</td>
-                            <td>@fat</td>
+                            <td scope="row">I pilastri della terra</td>
+                            <td>
+                                <span class="badge rounded-pill text-bg-success">Secondary</span>
+                            </td>
+                            <td class="d-none d-md-table-cell">---</td>
+                            <td>
+                                <div class="d-flex gap-2 justify-content-center">
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-square-pen"></i>
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                  </div>
+                            </td>
                           </tr>
                           <tr>
-                            <th scope="row">3</th>
-                            <td>John</td>
-                            <td class="d-sm-none d-md-table-cell">Doe</td>
-                            <td>@social</td>
+                            <td scope="row">I pilastri della terra</td>
+                            <td>
+                                <span class="badge rounded-pill text-bg-success">Secondary</span>
+                            </td>
+                            <td class="d-none d-md-table-cell">---</td>
+                            <td>
+                                <div class="d-flex gap-2 justify-content-center">
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-square-pen"></i>
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                  </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td scope="row">I pilastri della terra</td>
+                            <td>
+                                <span class="badge rounded-pill text-bg-success">Secondary</span>
+                            </td>
+                            <td class="d-none d-md-table-cell">---</td>
+                            <td>
+                                <div class="d-flex gap-2 justify-content-center">
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-square-pen"></i>
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                  </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td scope="row">I pilastri della terra</td>
+                            <td>
+                                <span class="badge rounded-pill text-bg-success">Secondary</span>
+                            </td>
+                            <td class="d-none d-md-table-cell">---</td>
+                            <td>
+                                <div class="d-flex gap-2 justify-content-center">
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-square-pen"></i>
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                  </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td scope="row">I pilastri della terra</td>
+                            <td>
+                                <span class="badge rounded-pill text-bg-success">Secondary</span>
+                            </td>
+                            <td class="d-none d-md-table-cell">---</td>
+                            <td>
+                                <div class="d-flex gap-2 justify-content-center">
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-square-pen"></i>
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm rounded">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                  </div>
+                            </td>
                           </tr>
                         </tbody>
                       </table>
