--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <h3>Catalogo Libri</h3>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary">Primary</button>
+                            <a type="button" class="btn btn-primary">Scegli Libri</a>
                         </div>
                     </div>
                     <table class="table table-striped">
